--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="styles.css" rel="stylesheet">
-    <title>ToDo-List</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 
 <body>
-    <div class="ToDo-flex pt-2 justify-content-center">
-        <h2 class="text-center py-3">TODO...</h2>
-        <div class="d-flex justify-content-center">
-        <form>
-            <input type="text" class="input-box"id="inputItem" name="submit" placeholder="Add an item">
-            <button type="button" class="btn btn-light py-0" onclick="addTask()"><img src="images/add-button.png" alt="add-btn-img" width="85%"></button>
-            <!-- <button id="change" onclick="change();">Modify</button> -->
-        </form>
+    <div class="container py-5">
+        <h2 class="heading text-center py-3">TODO...</h2>
+        <div class="d-flex justify-content-center mb-4">
+            <input type="text" class="text-box form-control w-50" id="todo-input" placeholder="Add a task">
+            <button class="btn-add btn btn-light ms-2" id="add-btn"><img src="images/add-button.png" alt="add-btn-img" width="85%"></button>
+        </div>
+        
+        <div class="alert" style="display: none;"></div>
+        <div id="todo-list"></div>
+
+        <div class="buttons d-flex justify-content-center mt-4 mb-4">
+            <button class="btn btn-outline-info footer-button" id="all">All</button>
+            <button class="btn btn-outline-primary footer-button" id="active">Active</button>
+            <button class="btn btn-outline-success footer-button" id="complete">Completed</button>
+            <button class="btn btn-outline-danger footer-button" id="clear">Clear Completed</button>
+        </div>
+
     </div>
-    <div>
-        <ul id="list" class="task-list">
-        </ul>
-    </div>
-    <div class="footer-buttons d-flex justify-content-center space-between">
-    <button type="button" class="btn btn-outline-secondary">All</button>
-    <button type="button" class="btn btn-outline-secondary">Active</button>
-    <button type="button" class="btn btn-outline-secondary">Completed</button>
-    <button type="button" class="btn btn-outline-secondary">Clear Completed</button>
-</div>
-</div>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
+
+
+
+
+
+
